--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.iq99</groupId>
 	<artifactId>common</artifactId>
-	<version>0.0.1-RELEASE</version>
-	<name>flyphant common</name>
+	<version>0.0.1</version>
+	<name>common</name>
+	<description>flyphant common projects</description>
 	<url>https://github.com/flyphant/common.git</url>
 	<licenses>
 		<license>
