--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,9 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
 						<version>2.2.1</version>
+						<configuration>
+							<encoding>UTF-8</encoding>
+						</configuration>
 						<executions>
 							<execution>
 								<phase>package</phase>
@@ -71,6 +74,9 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>2.9.1</version>
+						<configuration>
+							<encoding>UTF-8</encoding>
+						</configuration>
 						<executions>
 							<execution>
 								<phase>package</phase>
